# Marginalia

./: .env.example  .gitignore  README.md  electrobun.config  package.json  pyproject.toml  start.sh  tsconfig.json
agents/pdf_study/: AGENT.md  SKILL.md
agents/pdf_study/skills/insert-notes/: SKILL.md  insert_notes.py
agents/terminal_helper/: AGENT.md
agents/terminal_helper/skills/scan-terminals/: SKILL.md
agents/terminal_helper/skills/type-in-terminal/: SKILL.md
agents/threadkeeper/: AGENT.md
artifacts/canary/: update.json
core/: agent.py  desktop_observation.py  get_context.py  sandbox.py  screen.py  server.py  terminal.py
cursor-extension/: extension.js  marginalia-bridge-0.0.1.vsix  package.json
docs/plans/: 2026-03-08-learnbuddy-design.md
scripts/: package.sh  postBuild.ts
src/bun/: agent.ts  desktop-observation.ts  index.ts  kernel.ts  paths.ts  router.ts  screen.ts  server.ts  threadkeeper.ts
src/bun/tools/: registry.ts  run-code.ts
src/mainview/: index.html  index.ts
src/shared/: types.ts
