[project]
name = "marginalia"
version = "0.1.0"
description = "AI learning agent - sees your slides, answers questions, takes notes"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "python-pptx>=0.6.23",
    "markdown>=3.7.0",
    "matplotlib>=3.10.8",
]
